--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doctor Pioneer</title>
+    <title>Dr. Raaed AlRamdan</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -61,7 +61,7 @@
 </head>
 <body>
     <header>
-        <h1>Doctor Pioneer</h1>
+        <h1>Dr. Raaed AlRamdan</h1>
         <p>Internist & Gastroenterologist | Tech Enthusiast | Personal Development Advocate</p>
     </header>
 
@@ -73,9 +73,9 @@
 
     <div class="container">
         <section id="about">
-            <h2>About Doctor Pioneer</h2>
+            <h2>About Dr. Raaed AlRamdan</h2>
             <div class="card">
-                <p>Doctor Pioneer is an accomplished internist and gastroenterologist with a passion for advancing healthcare and personal growth. With a unique blend of expertise in medicine and technology, Doctor Pioneer strives to inspire others through innovation, creativity, and a holistic approach to health and well-being.</p>
+                <p>Dr. Raaed AlRamdanis an accomplished internist and gastroenterologist with a passion for advancing healthcare and personal growth. With a unique blend of expertise in medicine and technology, Doctor Pioneer strives to inspire others through innovation, creativity, and a holistic approach to health and well-being.</p>
             </div>
         </section>
 
@@ -116,7 +116,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Doctor Pioneer. All Rights Reserved.</p>
+        <p>&copy; 2025 Dr. Raaed AlRamdan. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
