--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <section id="about">
             <h2>About Dr. Raaed AlRamdan</h2>
             <div class="card">
-                <p>Dr. Raaed AlRamdan is an accomplished internist and gastroenterologist with a passion for advancing healthcare and personal growth. With a unique blend of expertise in medicine and technology, Doctor Pioneer strives to inspire others through innovation, creativity, and a holistic approach to health and well-being.</p>
+                <p>Dr. Raaed AlRamdan is an accomplished internist and gastroenterologist with a passion for advancing healthcare and personal growth. With a unique blend of expertise in medicine and technology, Dr. Raaed strives to inspire others through innovation, creativity, and a holistic approach to health and well-being.</p>
             </div>
         </section>
 
